tests/v0-fail/no_match.out
Running <root>/no_match.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern literal at line <root>/no_match.cli:4 does not match output line "hello"
matching Sequence(["bye", End])
  matching "bye"
  FAILED match: "hello"

❌ FAIL

<root>/no_match.cli FAILED
Error: pattern literal at line <root>/no_match.cli:4 does not match output line "hello"

