tests/v0-fail/no_match.cli
#!/usr/bin/env clitest --v0

$ echo "hello"
! bye
